Modified: Makefile for llist

--- a/llist/Makefile
+++ b/llist/Makefile
@@ -1,28 +1,18 @@
 GCC						=		gcc
 
-TEST_NAME 		=		llist_test
+TEST_NAME			=		llist_test
 
 LIB_NAME			=		llist.a
 
 CFLAGS       	=		-Wall -pedantic -g -pipe
 
-SOURCES				=		llist.c \
-									llist_support.c
+OBJ          	= 	llist.o main.o
 
-OBJ          	= 	$(SOURCES:.c=.o)
+$(TEST_NAME): libllist.a
+	gcc -L. -lllist -o $(TEST_NAME)
 
-$(PROGRAM_NAME): libllist.a
-	gcc -L. -lllist -o $(PROGRAM_NAME)
-
-libllist.a: llist.o main.o
-	ar cr libllist.a main.o llist.o
-
-# BUILD STATIC LIB .a
-all						:
-
-# 2- Build main.c using llist.h
-# 1- Link llist.a with main_test.o	
-test					:
+libllist.a: $(OBJ)
+	ar cr libllist.a $(OBJ)
 
 llist.o: ./src/llist.c 
 	gcc $(CFLAGS) -c ./src/llist.c -o llist.o
