--- a/Makefile_btree
+++ b/Makefile_btree
@@ -14,7 +14,7 @@ OBJ               =   hash.o hash_support.o
 
 LLIST_OBJ         =   ./btree/btree.o ./btree/btree_support.o
 
-INCLUDES          =   -I./hash/includes/ -I./btree/includes/
+INCLUDES          =   -I./hash/includes/ -I./btree/includes/ -I./llist/includes/ 
 
 $(TEST_NAME): $(LIB_NAME) $(STATIC_LIB_NAME) hash_tests.o
 	$(GCC) -o $(TEST_NAME) $(INCLUDES) hash_tests.o -L. -lhashdyn 
@@ -32,10 +32,7 @@ $(OBJ): $(SOURCE)
 	$(GCC) -c $(CFLAGS) $(INCLUDES) -DLIST_TYPE=2 -fpic $(SOURCE)
 
 $(LLIST_OBJ):  
-	make -C ./btree btree.o btree.o
-
-clean: 
-	rm *.o $(TEST_NAME) *.so
+	make -C ./btree btree.o btree_support.o
 
 clean: 
 	rm *.o $(TEST_NAME) *.so
